src/tests/fixtures/typename/PropertySignatureTypenameMissingType.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User implements IPerson {
  __typename;
  /** @gqlField */
  name: string;
}

/** @gqlInterface */
export interface IPerson {
  /** @gqlField */
  name: string;
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/typename/PropertySignatureTypenameMissingType.ts:3:3 - error: Expected `__typename` property to have an initializer or a string literal type.  This is needed to ensure Grats can determine the type of this object during GraphQL execution.

3   __typename;
    ~~~~~~~~~~


-- Code Action: "Create Grats-compatible `__typename` property" (fix-typename-property) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export class User implements IPerson {
-   __typename;
+   __typename = "User" as const;
    /** @gqlField */